正在开发账号列表

--- a/src/renderer/pages/Test/index.module.scss
+++ b/src/renderer/pages/Test/index.module.scss
@@ -4,12 +4,14 @@
   padding: 20px;
   //background: pink;
 
-  &__header{
+  &__header {
     display: flex;
     align-items: center;
+  }
+}
 
-    &>*{
-      margin-right: 12px;
-    }
+.collapse-content {
+  & > * {
+    margin-right: 12px;
   }
 }
