正在开发账号列表,待完善

--- a/src/renderer/pages/AccountManager/index.module.scss
+++ b/src/renderer/pages/AccountManager/index.module.scss
@@ -8,3 +8,12 @@
     margin-right: 8px;
   }
 }
+
+.account-online-flag {
+  padding-left: 8px;
+  color: #52C41A;
+
+  &:after {
+    content: '●';
+  }
+}
